// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 136746,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 136904,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 271546,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 299392,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 307719,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282565,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 218073,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 218204,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 237126,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 216938,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 367488,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 217023,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 346354,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 308261,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 286980,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 186480,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 194897,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 226674,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 195675,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 226742,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 195628,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 375084,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 261373,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 360197,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 252331,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 290590,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 265182,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 291298,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 368473,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 389102,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 336658,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 384669,
}
`;
